--- a/src/app/analytics/analytics.page.scss
+++ b/src/app/analytics/analytics.page.scss
@@ -23,7 +23,7 @@ ion-content {
 
   ion-header {
     ion-toolbar {
-      --background: #c24d2c; 
+      --background: #A393EB; 
       color:#fff;
       text-align: center;
     }
