--- a/src/app/analytics/analytics.page.html
+++ b/src/app/analytics/analytics.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-segment color="success" value="all">
+    <ion-segment color="success" value="all" class="animated fadeInDown">
       <ion-segment-button value="all">
         <ion-label>Analytics</ion-label>
       </ion-segment-button>
@@ -8,42 +8,31 @@
         <ion-label>Invoice Slip</ion-label>
       </ion-segment-button>
     </ion-segment>
-    <ion-icon routerLink="/home" slot="end" name="arrow-back-outline"></ion-icon>
+    <ion-icon routerLink="/home" slot="end" name="arrow-back-outline" class="animated fadeInRight"></ion-icon>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <div class="scroll-container">
-    <p class="pp">STORE INVENTORY</p>
+    <p class="pp animated fadeInUp">STORE INVENTORY</p>
     <div class="chart-container">
-      
       <br>
-      <canvas id="quantityByCategoryChart"></canvas>
+      <canvas id="quantityByCategoryChart" class="animated zoomIn"></canvas>
     </div>
- <br>
- <br>
- <p class="pp">STOREROOM INVENTORY</p>
+    <br><br>
+    <p class="pp animated fadeInUp">STOREROOM INVENTORY</p>
     <div class="chart-container">
-     
       <br>
-      <canvas id="quantityByCategoryStorommChart"></canvas>
+      <canvas id="quantityByCategoryStorommChart" class="animated zoomIn"></canvas>
     </div>
-    <br>
-    <br>
-    
-      <p class="pp">TOTAL CATEGORY COMPARISON ON BOTH STORE AND STOREROOM</p>
-    
-      <canvas id="categoryComparisonChart"></canvas>
-
-
-     <br>
-     <br>
-<p class="pp">TOTAL PRODUCT QUANTITIES </p>
-<canvas id="totalQuantitiesChart"></canvas>
-
-<br>
-<br>
-<p class="pp">BEST PERFOMING PRODUCT</p>
-<canvas id="updateFrequencyChart"></canvas>
+    <br><br>
+    <p class="pp animated fadeInUp">TOTAL CATEGORY COMPARISON ON BOTH STORE AND STOREROOM</p>
+    <canvas id="categoryComparisonChart" class="animated zoomIn"></canvas>
+    <br><br>
+    <p class="pp animated fadeInUp">TOTAL PRODUCT QUANTITIES</p>
+    <canvas id="totalQuantitiesChart" class="animated zoomIn"></canvas>
+    <br><br>
+    <p class="pp animated fadeInUp">BEST PERFOMING PRODUCT</p>
+    <canvas id="updateFrequencyChart" class="animated zoomIn"></canvas>
   </div>
 </ion-content>
