--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,7 +3,7 @@
     <ion-title>
      Welcome Best Brightness 
     </ion-title>
-    <ion-icon slot="end" name="power-outline" (click)="presentConfirmationAlert()"></ion-icon>
+    <ion-icon slot="end" class="logout" name="power-outline" (click)="presentConfirmationAlert()"></ion-icon>
   </ion-toolbar>
 </ion-header>
 
