--- a/src/app/storeroom/storeroom.page.html
+++ b/src/app/storeroom/storeroom.page.html
@@ -88,7 +88,7 @@
     <ion-row class="ion-no-padding">
      
       <ion-col>
-        <ion-button (click)="openModal(item.imageUrl, item.name)" color="secondary" expand="block">
+        <ion-button (click)="openModal(item.imageUrl, item.name)" class="view" expand="block">
           <ion-icon name="eye-outline"></ion-icon>
           View
         </ion-button>
