--- a/src/app/storeroom/storeroom.page.scss
+++ b/src/app/storeroom/storeroom.page.scss
@@ -15,7 +15,9 @@ ion-content {
     --background: #f7f7f7;
     --ion-font-family: 'Poppins', sans-serif;
   }
-  
+  .view{
+    --background: #664cdd;
+  }
 
   /* Inventory Item Styles */
   .inventory-item {
