--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -14,6 +14,11 @@
     font-weight: bolder;
     color: #A393EB;
   }
+  .logout{
+    font-size: 25px;
+    font-weight: bolder;
+    color: #fff;
+  }
 
   ion-content {
     --background: #A393EB; /* Set your desired background color */
