--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -19,7 +19,7 @@
       <ion-col size="6" routerLink="/add-inventory">
         <ion-card class="menu-card">
           <ion-card-header>
-            <ion-card-title>Add to Store Inventory</ion-card-title>
+            <ion-card-title>Move to Store</ion-card-title>
             <ion-icon name="add-circle-outline"></ion-icon>
           </ion-card-header>
         </ion-card>
@@ -27,7 +27,7 @@
       <ion-col size="6" routerLink="/update">
         <ion-card class="menu-card">
           <ion-card-header>
-            <ion-card-title>Update Inventory</ion-card-title>
+            <ion-card-title>Update STORE</ion-card-title>
             <ion-icon name="repeat-outline"></ion-icon>
           </ion-card-header>
         </ion-card>
