--- a/src/app/storeroom/add-inventory-storeroom/add-inventory-storeroom.page.html
+++ b/src/app/storeroom/add-inventory-storeroom/add-inventory-storeroom.page.html
@@ -46,6 +46,10 @@
         <ion-label position="floating">Quantity</ion-label>
         <ion-input type="number" [(ngModel)]="itemQuantity"></ion-input>
       </ion-item>
+      <ion-item class="animated fadeInRight">
+        <ion-label position="floating">Size of Prodcut</ion-label>
+        <ion-input type="text" [(ngModel)]="sizeProduct"></ion-input>
+      </ion-item>
       <ion-item class="animated fadeInLeft">
         <ion-label position="floating">Picker Name</ion-label>
         <ion-input type="text" [(ngModel)]="pickersDetails"></ion-input>
