--- a/src/app/delivery/delivery.page.html
+++ b/src/app/delivery/delivery.page.html
@@ -1,13 +1,9 @@
+<!-- delivery.page.html -->
 <ion-header>
   <ion-toolbar>
-    <ion-segment color="success" value="favorites">
-      <ion-segment-button routerLink="/analytics" value="all">
-        <ion-label>Analytics</ion-label>
-      </ion-segment-button>
-      <ion-segment-button value="favorites">
-        <ion-label>Invoice Slip</ion-label>
-      </ion-segment-button>
-    </ion-segment>
+    <ion-title>
+      Invoice Slips
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
