--- a/src/app/storeroom/add-inventory-storeroom/add-inventory-storeroom.page.html
+++ b/src/app/storeroom/add-inventory-storeroom/add-inventory-storeroom.page.html
@@ -51,11 +51,11 @@
         <ion-input type="text" [(ngModel)]="sizeProduct"></ion-input>
       </ion-item>
       <ion-item class="animated fadeInLeft">
-        <ion-label position="floating">Picker Name</ion-label>
+        <ion-label position="floating">delivery Name</ion-label>
         <ion-input type="text" [(ngModel)]="pickersDetails"></ion-input>
       </ion-item>
       <ion-item class="animated fadeInRight">
-        <ion-label position="floating">Picker Email</ion-label>
+        <ion-label position="floating">delivery Email</ion-label>
         <ion-input type="text" [(ngModel)]="pickersDetailsEmail"></ion-input>
       </ion-item>
       <ion-item class="animated fadeInLeft">
