--- a/src/app/add-inventory/add-inventory.page.html
+++ b/src/app/add-inventory/add-inventory.page.html
@@ -78,7 +78,7 @@
 
 
       <ion-button expand="block" (click)="addItem()">Add Item</ion-button>
-      <ion-button expand="block"  color="success" (click)="generateSlip()">DONE</ion-button>
+      <ion-button expand="block"  color="success" (click)="generateSlip()">Print Record Slip</ion-button>
     </ion-card-content>
   </ion-card>
 
