--- a/src/app/storeroom/add-inventory-storeroom/add-inventory-storeroom.page.html
+++ b/src/app/storeroom/add-inventory-storeroom/add-inventory-storeroom.page.html
@@ -78,7 +78,7 @@
         <ion-icon name="camera"></ion-icon> Take Picture
       </ion-button>
       <ion-button expand="block" (click)="addItem()" class="animated zoomIn">Add Item</ion-button>
-      <ion-button expand="block" (click)="generateSlip()" class="animated zoomIn">DONE</ion-button>
+      <ion-button expand="block" (click)="generateSlip()" class="animated zoomIn">Print Slip</ion-button>
     </ion-card-content>
   </ion-card>
 </ion-content>
